# cpp-course-tic-tac-toe-tesk

./: Board.cpp  Board.h  CMakeLists.txt  Champion.cpp  Champion.h  Coordinata.cpp  Coordinata.hpp  Coordinate.cpp  Coordinate.hpp  DummyPlayers.cpp  DummyPlayers.h  IllegalCharException.hpp  IllegalCoordinateException.hpp  Makefile  Player.cpp  Player.h  README.md  TicTacToe.cpp  TicTacToe.h  main.cpp  test6.cpp
pic/: MyBoard10.ppm  MyBoard12.ppm  MyBoard14.ppm  MyBoard16.ppm  MyBoard17.ppm  MyBoard19.ppm  MyBoard20.ppm  MyBoard21.ppm  MyBoard22.ppm  MyBoard24.ppm  MyBoard25.ppm  MyBoard28.ppm  MyBoard3.ppm  MyBoard6.ppm  MyBoard8.ppm  MyBoard9.ppm  pict1.ppm  pict2.ppm  pict3.ppm  picworkin2col.ppm  picworking.ppm
